@@ -48,7 +48,8 @@
 - New layout generator option: Prefer one sheet solution.
 - [smart-pattern/valentina#15] Organization of groups - groups categories
 - Improve the property browser. Show full arc name.
-- [smart-pattern/valentina#45] Optimize tool box position for big screen resolutions. 
+- [smart-pattern/valentina#45] Optimize tool box position for big screen resolutions.
+- [smart-pattern/valentina#40] Invalid name of arc in modeling mode.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
